; ModuleID = '/home/carl/AnghaBench/linux/arch/c6x/platforms/extr_cache.c_disable_caching.c'
source_filename = "/home/carl/AnghaBench/linux/arch/c6x/platforms/extr_cache.c_disable_caching.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IMCR_MAR_BASE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disable_caching(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* @IMCR_MAR_BASE, align 8
  %8 = load i64, i64* %3, align 8
  %9 = lshr i64 %8, 24
  %10 = shl i64 %9, 2
  %11 = add i64 %7, %10
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %5, align 4
  %13 = load i64, i64* @IMCR_MAR_BASE, align 8
  %14 = load i64, i64* %4, align 8
  %15 = lshr i64 %14, 24
  %16 = shl i64 %15, 2
  %17 = add i64 %13, %16
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %6, align 4
  br label %19

19:                                               ; preds = %29, %2
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ule i32 %20, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %19
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @imcr_get(i32 %25)
  %27 = and i32 %26, -2
  %28 = call i32 @imcr_set(i32 %24, i32 %27)
  br label %29

29:                                               ; preds = %23
  %30 = load i32, i32* %5, align 4
  %31 = add i32 %30, 4
  store i32 %31, i32* %5, align 4
  br label %19

32:                                               ; preds = %19
  ret void
}

declare dso_local i32 @imcr_set(i32, i32) #1

declare dso_local i32 @imcr_get(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
